--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "https://lms-server-f9ay.onrender.com/"
+    "start": "nodemon ./server.js"
   },
   "author": "",
   "license": "ISC",
