--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "type": "module",
   "main": "server.js",
   "scripts": {
@@ -25,5 +24,7 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "razorpay": "^2.9.2"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
